--- a/index.Rmd
+++ b/index.Rmd
@@ -61,17 +61,21 @@ parameter estimable from the observed data distribution). Familiarity with the
 ## Workshop schedule {#schedule}
 
 * 10:00A-10:30A: introductions/mediation set up
-* 10:30A-11:00A: estimands and how to choose
-* 11:00A-11:30A: discussion: how to choose in real-world examples
-* 11:30A-12:00P: shift parameter introduction with application in lecture part
+<!-- Ivan-->
+* 10:30A-11:15A: controlled direct effects, natural direct and indirect effects, interventional direct and indirect effects
+ <!-- Kara-->
+* 11:15A-11:45A: stochastic mediation estimands
+ <!-- Nima-->
+* 11:45A-12:00P: how to choose an estimand in real-world examples
+ <!-- Kara-->
 * 12:00P-12:15P break/discussion
-* 12:15P-12:45P estimation for natural direct and indirect effects,
-  interventional direct and indirect effects
-* 12:45P-01:15P: practice `R` code for estimation
-* 01:15P-01:30P: estimation for stochastic interventional direct and indirect
-  effects
-* 01:30P-01:50P: practice: code for estimation
-* 01:50P-02:00P wrap up
+* 12:15P-12:45P: what is the EIF
+ <!-- Ivan-->
+* 12:45P-01:00P: using the EIF for estimating the natural direct effect
+<!-- Ivan-->
+* 01:00P-01:45P: practice: `R` code for estimation
+ <!-- Nima-->
+* 01:45P-02:00P wrap up
 
 __NOTE: All times listed in Pacific Time.__
 
